Fixed chrome overflow

--- a/resources/css/reset.scss
+++ b/resources/css/reset.scss
@@ -1,4 +1,4 @@
-body {
+body, html {
     max-width: 100vw;
     overflow-x: hidden;
 }
